objects/EmailSetup__c.object
<CustomObject>
    <fields>
        <fullName>CaseUpdatesTemplate__c</fullName>
        <inlineHelpText>Only used in the &quot;Case Updates&quot; setup</inlineHelpText>
        <label>Template: Case Updates</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>IT Help Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Help Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WANstart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delimiter__c</fullName>
        <inlineHelpText>If email body contain this delimiter, text below will be dropped.</inlineHelpText>
        <label>Delimiter</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Email_From__c</fullName>
        <inlineHelpText>Drop the emails coming from these addresses. One email address in a line.</inlineHelpText>
        <label>Drop Email From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spam_Keywords__c</fullName>
        <defaultValue>&quot;mail delivery failure&quot; &amp; BR() &amp;
&quot;out of office&quot; &amp; BR() &amp;
&quot;undeliverable&quot; &amp; BR() &amp;
&quot;spam notification&quot;</defaultValue>
        <inlineHelpText>Emails with the subject contains these keyword will be dropped, one keyword in a line</inlineHelpText>
        <label>Spam Keywords</label>
        <type>TextArea</type>
    </fields>
    <label>Email Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>